k8s/database-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: agrisense-db
  labels:
    app: agrisense-db
spec:
  ports:
    - port: 5432
  selector:
    app: agrisense-db
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrisense-db
  labels:
    app: agrisense-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agrisense-db
  template:
    metadata:
      labels:
        app: agrisense-db
    spec:
      containers:
        - name: postgis
          image: postgis/postgis:15-3.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: postgis-pvc
